src/tui/widgets/wizard/snapshots/ghr_stats__tui__widgets__wizard__draw__tests__snapshot_confirmed.snap
---
source: src/tui/wizard.rs
expression: render(&mode)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Confirm ─────────────────────────────────────┐                "
"                │                                              │                "
"                │  example-org — valid, 3/4 local runners      │                "
"                │matched.                                      │                "
"                │  Save this read-only token to the config     │                "
"                │(0600)?                                       │                "
"                │                                              │                "
"                │  [y] save · [n] cancel                       │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
