src/tui/widgets/wizard/snapshots/ghr_stats__tui__widgets__wizard__draw__tests__snapshot_org_input.snap
---
source: src/tui/wizard.rs
expression: render(&mode)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Add org ─────────────────────────────────────┐                "
"                │                                              │                "
"                │  GitHub org login: example-org               │                "
"                │                                              │                "
"                │  [Enter] next · [Esc] cancel                 │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
