src/tui/widgets/wizard/snapshots/ghr_stats__tui__widgets__wizard__draw__tests__snapshot_pat_input_with_rejection.snap
---
source: src/tui/widgets/wizard.rs
expression: render(&mode)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Add PAT ─────────────────────────────────────┐                "
"                │  org  example-org                            │                "
"                │  Fine-grained PAT (github_pat_…):            │                "
"                │•••••••••••••••                               │                "
"                │  needs Self-hosted runners: Read  (+ Actions:│                "
"                │Read for job results)                         │                "
"                │  ✗ token lacks 'Self-hosted runners: Read' on│                "
"                │example-org                                   │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
