src/tui/widgets/wizard/snapshots/ghr_stats__tui__widgets__wizard__draw__tests__snapshot_remove_org_input.snap
---
source: src/tui/widgets/wizard.rs
expression: render(&mode)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Remove org ──────────────────────────────────┐                "
"                │                                              │                "
"                │  GitHub org login to remove: example-org     │                "
"                │                                              │                "
"                │  [Enter] next · [Esc] cancel                 │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
